--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,12 @@
-﻿<!-- index.html build v2025-10-10-2 -->
-<!DOCTYPE html><html lang="en"><head><meta charset="UTF-8"><title>Martial Arts App</title>
-  <link rel="stylesheet" href="styles.css?v=1" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-
-</head><body>
-<h1>Martial Arts App</h1>
-<div class="grid">
-  <a class="card" href="students.html">Students</a>
-  <a class="card" href="attendance.html">Attendance</a>
-  <a class="card" href="payments.html">Payments</a>
-  <a class="card" href="expenses.html">Expenses</a>
-  <a class="card" href="accounting.html">Accounting</a>
-  <a class="card" href="leads.html">Leads</a>
-</div>
-</body></html>
-
+<!DOCTYPE html><html><head>
+<meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/>
+<title>Dojo Apps</title>
+<link rel="stylesheet" href="main.css"/>
+</head><body><div class="container">
+  <h1>Dojo Apps</h1>
+  <div class="card">
+    <p><a class="btn btn-primary" href="students.html">Students</a></p>
+    <p><a class="btn" href="leads.html">Leads</a></p>
+    <p><a class="btn" href="accounting.html">Accounting</a></p>
+  </div>
+</div></body></html>
