--- a/public/students.html
+++ b/public/students.html
@@ -7,7 +7,7 @@
   <div class="card">
     <h2>Add / Edit Student</h2>
     <div class="grid">
-      <input id="first_name" placeholder="First name" required>
+      <input id="first_name" placeholder="First name">
       <input id="last_name" placeholder="Last name">
       <input id="phone" placeholder="Phone">
       <input id="email" placeholder="Email">
@@ -15,123 +15,115 @@
       <input id="join_date" type="date" placeholder="Join date">
       <input id="renewal_date" type="date" placeholder="Renewal date (+28d)">
       <input id="address" placeholder="Address">
+      <input id="photo" placeholder="Photo URL (optional)">
     </div>
     <div class="toolbar">
-      <button class="btn btn-primary" id="saveBtn">Save Student</button>
+      <button class="btn btn-primary" id="saveStudent">Save Student</button>
+      <button class="btn" id="showActive">Show Active</button>
+      <button class="btn" id="showOld">Show Old</button>
       <span class="badge" id="status"></span>
     </div>
-  </div>
-
-  <div class="toolbar">
-    <button class="btn" id="showActive">Show Active</button>
-    <button class="btn" id="showOld">Show Old</button>
   </div>
 
   <div class="card">
     <h2 id="listTitle">Active Students</h2>
     <table class="table" id="studentsTable">
-      <thead><tr>
-        <th>Name</th><th>Phone</th><th>Program</th><th>Join</th><th>Renewal</th><th>Actions</th>
-      </tr></thead><tbody></tbody>
+      <thead><tr><th>Photo</th><th>Name</th><th>Phone</th><th>Program</th><th>Join</th><th>Renewal</th><th>Actions</th></tr></thead>
+      <tbody></tbody>
     </table>
   </div>
 
   <p><a href="index.html">Back to Main</a></p>
 </div>
-
 <script>
 const $ = s => document.querySelector(s);
-const api = (p, opt) => fetch(p, opt).then(r => r.ok ? r.json() : r.json().then(e=>Promise.reject(e)));
-let showingOld = false;
-let editingId = null;
+const api = (p,opt)=>fetch(p,opt).then(r=>r.ok?r.json():r.json().then(e=>Promise.reject(e)));
 
-// Default dates: today & +28d
-(function setDefaultDates(){
-  const join = $('#join_date'), renew = $('#renewal_date');
-  const fmt = d => d.toISOString().slice(0,10);
+let showOld=false, editing=null;
+
+(function defaults(){
+  const fmt = d=>d.toISOString().slice(0,10);
   const now = new Date();
-  join.value = fmt(now);
-  const r = new Date(now); r.setDate(r.getDate()+28);
-  renew.value = fmt(r);
-  join.addEventListener('change', ()=>{
-    const d = new Date(join.value); if(!isNaN(d)) { d.setDate(d.getDate()+28); renew.value = fmt(d); }
+  $("#join_date").value = fmt(now);
+  const r = new Date(now); r.setDate(r.getDate()+28); $("#renewal_date").value = fmt(r);
+  $("#join_date").addEventListener("change", ()=>{
+    const d = new Date($("#join_date").value); if(!isNaN(d)){ d.setDate(d.getDate()+28); $("#renewal_date").value = fmt(d); }
   });
 })();
 
 async function load(){
-  const url = showingOld ? '/api/students?is_active=0' : '/api/students?is_active=1';
-  const data = await api(url);
-  const tb = $('#studentsTable tbody'); tb.innerHTML = '';
-  data.forEach(s=>{
-    const tr = document.createElement('tr');
-    const name = (s.first_name||'') + ' ' + (s.last_name||'');
+  const url = showOld ? "/api/students?is_active=0" : "/api/students?is_active=1";
+  const rows = await api(url);
+  const tb = document.querySelector("#studentsTable tbody"); tb.innerHTML = "";
+  rows.forEach(s=>{
+    const tr = document.createElement("tr");
+    const name = (s.first_name||"") + " " + (s.last_name||"");
+    const img = s.photo ? `<img class="student-photo" src="${s.photo}" alt="">` : "";
     tr.innerHTML = `
+      <td>${img}</td>
       <td>${name}</td>
-      <td>${s.phone||''}</td>
-      <td>${s.program||''}</td>
-      <td>${s.join_date||''}</td>
-      <td>${s.renewal_date||''}</td>
+      <td>${s.phone||""}</td>
+      <td>${s.program||""}</td>
+      <td>${s.join_date||""}</td>
+      <td>${s.renewal_date||""}</td>
       <td>
         <button class="btn" data-act="edit" data-id="${s.id}">Edit</button>
         <button class="btn btn-danger" data-act="del" data-id="${s.id}">Delete</button>
-        ${s.is_active ? 
-          `<button class="btn btn-warn" data-act="archive" data-id="${s.id}">Archive</button>` :
-          `<button class="btn btn-primary" data-act="restore" data-id="${s.id}">Restore</button>`}
+        ${s.is_active?`<button class="btn btn-warn" data-act="archive" data-id="${s.id}">Archive</button>`:
+                        `<button class="btn btn-primary" data-act="restore" data-id="${s.id}">Restore</button>`}
       </td>`;
     tb.appendChild(tr);
   });
-  $('#listTitle').textContent = showingOld ? 'Old Students' : 'Active Students';
+  $("#listTitle").textContent = showOld ? "Old Students" : "Active Students";
 }
-$('#showActive').onclick = ()=>{ showingOld=false; load(); };
-$('#showOld').onclick = ()=>{ showingOld=true; load(); };
 
-$('#studentsTable').addEventListener('click', async (e)=>{
-  const btn = e.target.closest('button'); if(!btn) return;
-  const id = btn.dataset.id; const act = btn.dataset.act;
+document.getElementById("showActive").onclick = ()=>{ showOld=false; load(); };
+document.getElementById("showOld").onclick    = ()=>{ showOld=true;  load(); };
+
+document.getElementById("studentsTable").addEventListener("click", async (e)=>{
+  const b = e.target.closest("button"); if(!b) return;
+  const id=b.dataset.id, act=b.dataset.act;
   try{
-    if (act==='edit'){
-      const s = await api('/api/students/'+id);
-      editingId = id;
-      for (const k of ['first_name','last_name','phone','email','program','join_date','renewal_date','address']){
-        const el = document.getElementById(k); if (el) el.value = s[k]||'';
-      }
-      $('#status').textContent = 'Editing ID '+id;
-    } else if (act==='del'){
-      await api('/api/students/'+id, { method:'DELETE' });
-      load();
-    } else if (act==='archive'){
-      await api(`/api/students/${id}/archive`, { method:'POST' });
-      load();
-    } else if (act==='restore'){
-      await api(`/api/students/${id}/restore`, { method:'POST' });
-      load();
+    if (act==="edit"){
+      const s = await api("/api/students/"+id); editing=id;
+      ["first_name","last_name","phone","email","program","join_date","renewal_date","address","photo"].forEach(k=>{
+        const el=document.getElementById(k); if (el) el.value = s[k]||"";
+      });
+      $("#status").textContent = "Editing #"+id;
+    } else if (act==="del"){
+      await api("/api/students/"+id, { method:"DELETE" }); load();
+    } else if (act==="archive"){
+      await api(`/api/students/${id}/archive`, { method:"POST" }); load();
+    } else if (act==="restore"){
+      await api(`/api/students/${id}/restore`, { method:"POST" }); load();
     }
-  }catch(err){ alert(err.error||'Error'); }
+  }catch(err){ alert(err.error || "Action failed"); }
 });
 
-$('#saveBtn').onclick = async ()=>{
+document.getElementById("saveStudent").onclick = async ()=>{
   const body = {
-    first_name: $('#first_name').value.trim(),
-    last_name:  $('#last_name').value.trim(),
-    phone:      $('#phone').value.trim(),
-    email:      $('#email').value.trim(),
-    program:    $('#program').value.trim(),
-    join_date:  $('#join_date').value,
-    renewal_date: $('#renewal_date').value,
-    address:    $('#address').value.trim(),
+    first_name: $("#first_name").value.trim(),
+    last_name:  $("#last_name").value.trim(),
+    phone:      $("#phone").value.trim(),
+    email:      $("#email").value.trim(),
+    program:    $("#program").value.trim(),
+    join_date:  $("#join_date").value,
+    renewal_date: $("#renewal_date").value,
+    address:    $("#address").value.trim(),
+    photo:      $("#photo").value.trim(),
     is_active:  1
   };
-  const opt = { method:'POST', headers:{'Content-Type':'application/json'}, body:JSON.stringify(body) };
+  const opt = { method:"POST", headers:{ "Content-Type":"application/json" }, body: JSON.stringify(body) };
   try{
-    if (editingId){
-      await api('/api/students/'+editingId, { ...opt, method:'PUT' });
-      editingId = null; $('#status').textContent = 'Saved.';
+    if (editing){
+      await api("/api/students/"+editing, { ...opt, method:"PUT" });
+      editing = null; $("#status").textContent = "Saved.";
     } else {
-      await api('/api/students', opt);
-      $('#status').textContent = 'Added.';
+      await api("/api/students", opt);
+      $("#status").textContent = "Added.";
     }
     load();
-  }catch(err){ alert(err.error||'Error'); }
+  }catch(err){ alert(err.error || "Save failed"); }
 };
 
 load();
