Add Expenses tile back to index + bump version marker

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,4 @@
-?<!DOCTYPE html>
+﻿?<!DOCTYPE html>
 <html>
 <head>
   <meta charset="utf-8"/>
@@ -30,9 +30,14 @@
       <a class="card" href="accounting.html">
         <h2>Accounting</h2>
         <p>Revenue by method, expenses, and net (CAD)</p>
-      </a></main>
+      </a>      <a class="card" href="expenses.html">
+        <h2>Expenses</h2>
+        <p>Add and review expenses</p>
+      </a>
+</main>
   </div>
 </body>
 </html>
+
 
 
